@@ -24,6 +24,29 @@
 
 namespace hamsterdb {
 
+/*
+ * typedefs for posix
+ */
+#ifdef HAM_OS_POSIX
+typedef int                ham_fd_t;
+typedef int	               ham_socket_t;
+#  define HAM_INVALID_FD  (-1)
+#endif
+
+/*
+ * typedefs for Windows 32- and 64-bit
+ */
+#ifdef HAM_OS_WIN32
+#  ifdef CYGWIN
+typedef int                ham_fd_t;
+typedef int	               ham_socket_t;
+#  else
+typedef HANDLE             ham_fd_t;
+typedef SOCKET             ham_socket_t;
+#  endif
+#  define HAM_INVALID_FD   (0)
+#endif
+
 //
 // A simple wrapper around a file handle. Throws exceptions in
 // case of errors
