@@ -1,3 +1,12 @@
+Jun 30, 2014 - chris ---------------------------------------------------
+o header files no longer include winsock.h to avoid conflicts with winsock2.h
+	on Windows platforms
+
+Jun 30, 2014 - chris ---------------------------------------------------
+o Both btree layouts have been completely rewritten; PAX KeyLists
+	can now be used in combination with duplicate RecordLists, and variable
+	length KeyLists can now be used in combination with PAX RecordLists
+
 May 13, 2014 - chris ---------------------------------------------------
 o Adding the new "hola" API - hamsterdb analytical functions for COUNT,
 	SUM, AVERAGE etc. See ham/hamsterdb_ola.h for the declarations
